# vulkan-svo

./: .gitignore  CMakeLists.txt  README.md  camera-hm.json  camera.json  main.cpp  pyproject.toml  todo.md
camera_positions/: camera_location_test0.json  camera_location_test1.json  camera_path_test2.json  camera_path_test3.json
include/: tribox.h
shaders/: a.spv  comp.spv  compile.bat  frag.spv  shader.comp  shader.frag  shader.vert  shader_grid.comp  shader_svo.comp  vert.spv
src/: chunk_generation_application.cpp  chunk_generation_application.h  chunk_management.cpp  chunk_management.h  compute_shader_application.cpp  compute_shader_application.h  compute_shader_application_init.cpp  compute_shader_application_input.cpp  compute_shader_application_loop.cpp  config.cpp  config.h  data_manage_threat.cpp  data_manage_threat.h  input.cpp  input.h  scene_metadata.cpp  scene_metadata.h  structures.cpp  structures.h  svo_generation.cpp  svo_generation.h  voxelizer.cpp  voxelizer.h
test_scripts/: big_scene_output.txt  compare.py  create_graphs_from_logs.py  experiment_one_configurations.py  experiment_three_configurations.py  experiment_two_configurations.py  output.csv  run_experiments.py  small_scene_output.txt  test_moving_scene.py  test_static_scene.py
test_scripts/compare_results/: 2048_1.csv  2048_3.csv  512_1.csv
test_scripts/exp1_results/: location_1_1024_1.csv  location_1_1024_11.csv  location_1_1024_13.csv  location_1_1024_15.csv  location_1_1024_17.csv  location_1_1024_19.csv  location_1_1024_21.csv  location_1_1024_23.csv  location_1_1024_25.csv  (+123 more)
(+61 files in other folders)
